[project]
name = "roadcli"
version = "0.1.0"
description = "BlackRoad Command Line Interface - Unified CLI for BlackRoad services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}
]
keywords = ["cli", "blackroad", "devops", "automation"]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
road = "roadcli.main:cli"
roadcli = "roadcli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
