[project]
name = "roadcli"
version = "0.1.0"
description = "RoadCLI - BlackRoad OS Command Line Interface"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "BlackRoad OS, Inc."},
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "keyring>=25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
road = "roadcli.main:main"
roadcli = "roadcli.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
